--- a/src/app/landing/landing.html
+++ b/src/app/landing/landing.html
@@ -16,19 +16,19 @@
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse collapse-for-small landing-collapse-small" id="bs-example-navbar-collapse-1">
           <div class="nav navbar-nav landing-header">
-            <!--<div class="equipments-div left-link-div">-->
-              <!--<span class="glyphicon glyphicon-align-justify"></span>-->
-              <!--<div class="cd-dropdown-wrapper">-->
-                    <!--<a class="cd-dropdown-trigger eqe_tex cd-dropdown-trigger-small" menu-aim-dir href="#0">Equipments</a>-->
-                    <!--<nav class="cd-dropdown">-->
-                      <!--<h2>Title</h2>-->
-                      <!--<a href="#0" class="cd-close">Close</a>-->
-                      <!--<ul class="cd-dropdown-content">-->
-                        <!--&lt;!&ndash; <li>-->
-                          <!--<form class="cd-search">-->
-                            <!--<input type="search" placeholder="Search...">-->
-                          <!--</form>-->
-                        <!--</li> &ndash;&gt;-->
+            <div class="equipments-div left-link-div">
+              <span class="glyphicon glyphicon-align-justify"></span>
+              <div class="cd-dropdown-wrapper">
+                    <a class="cd-dropdown-trigger eqe_tex cd-dropdown-trigger-small" menu-aim-dir href="#0">Equipments</a>
+                    <nav class="cd-dropdown">
+                      <h2>Title</h2>
+                      <a href="#0" class="cd-close">Close</a>
+                      <ul class="cd-dropdown-content">
+                        <!-- <li>
+                          <form class="cd-search">
+                            <input type="search" placeholder="Search...">
+                          </form>
+                        </li> -->
                         <!--<li class="has-children" ng-repeat="menu in equipmentMenus">-->
                           <!--<a href="#">{{menu.Name}}</a>-->
 
@@ -137,137 +137,137 @@
                           <!--</ul> &lt;!&ndash; .cd-secondary-dropdown &ndash;&gt;-->
                         <!--</li> &lt;!&ndash; .has-children &ndash;&gt;-->
 
-                        <!--<li class="has-children">-->
-                          <!--<a href="#">Gallery</a>-->
+                        <li class="has-children">
+                          <a href="#">Rent</a>
 
-                          <!--<ul class="cd-dropdown-gallery is-hidden">-->
-                            <!--<li class="go-back"><a href="#0">Menu</a></li>-->
-                            <!--<li class="see-all"><a href="http://codyhouse.co/?p=748">Browse Gallery</a></li>-->
-                            <!--<li>-->
-                              <!--<a class="cd-dropdown-item" href="http://codyhouse.co/?p=748">-->
-                                <!--<img src="assets/images/img.png" alt="Product Image">-->
-                                <!--<h3>Product #1</h3>-->
-                              <!--</a>-->
-                            <!--</li>-->
+                          <ul class="cd-dropdown-gallery is-hidden">
+                            <li class="go-back"><a href="#0">Menu</a></li>
+                            <li class="see-all"><a href="http://codyhouse.co/?p=748">Browse More Categories</a></li>
+                            <li>
+                              <a class="cd-dropdown-item" href="http://codyhouse.co/?p=748">
+                                <img src="http://nobleiron.com/catimages/Scissor_Lift_new.png" alt="Product Image" style="width: 50px;height: 50px;">
+                                <h3>Scissor Lifts</h3>
+                              </a>
+                            </li>
 
-                            <!--<li>-->
-                              <!--<a class="cd-dropdown-item" href="http://codyhouse.co/?p=748">-->
-                                <!--<img src="assets/images/img.png" alt="Product Image">-->
-                                <!--<h3>Product #2</h3>-->
-                              <!--</a>-->
-                            <!--</li>-->
+                            <li>
+                              <a class="cd-dropdown-item" href="http://codyhouse.co/?p=748">
+                                <img src="http://nobleiron.com/catimages/Scissor_Lift_new.png" alt="Product Image" style="width: 50px;height: 50px;">
+                                <h3>Boom Lifts</h3>
+                              </a>
+                            </li>
 
-                            <!--<li>-->
-                              <!--<a class="cd-dropdown-item" href="http://codyhouse.co/?p=748">-->
-                                <!--<img src="assets/images/img.png" alt="Product Image">-->
-                                <!--<h3>Product #3</h3>-->
-                              <!--</a>-->
-                            <!--</li>-->
+                            <li>
+                              <a class="cd-dropdown-item" href="http://codyhouse.co/?p=748">
+                                <img src="http://nobleiron.com/catimages/Scissor_Lift_new.png" alt="Product Image" style="width: 50px;height: 50px;">
+                                <h3>Mini Excavators</h3>
+                              </a>
+                            </li>
 
-                            <!--<li>-->
-                              <!--<a class="cd-dropdown-item" href="http://codyhouse.co/?p=748">-->
-                                <!--<img src="assets/images/img.png" alt="Product Image">-->
-                                <!--<h3>Product #4</h3>-->
-                              <!--</a>-->
-                            <!--</li>-->
-                          <!--</ul> &lt;!&ndash; .cd-dropdown-gallery &ndash;&gt;-->
-                        <!--</li> &lt;!&ndash; .has-children &ndash;&gt;-->
+                            <li>
+                              <a class="cd-dropdown-item" href="http://codyhouse.co/?p=748">
+                                <img src="http://nobleiron.com/catimages/Scissor_Lift_new.png" alt="Product Image" style="width: 50px;height: 50px;">
+                                <h3>Backhoes</h3>
+                              </a>
+                            </li>
+                          </ul> <!-- .cd-dropdown-gallery -->
+                        </li> <!-- .has-children -->
 
-                        <!--<li class="has-children">-->
-                          <!--<a href="#">Services</a>-->
-                          <!--<ul class="cd-dropdown-icons is-hidden">-->
-                            <!--<li class="go-back"><a href="#0">Menu</a></li>-->
-                            <!--<li class="see-all"><a href="http://codyhouse.co/?p=748">Browse Services</a></li>-->
-                            <!--<li>-->
-                              <!--<a class="cd-dropdown-item item-1" href="http://codyhouse.co/?p=748">-->
-                                <!--<h3>Service #1</h3>-->
-                                <!--<p>This is the item description</p>-->
-                              <!--</a>-->
-                            <!--</li>-->
+                        <li class="has-children">
+                          <a href="#">Buy</a>
+                          <ul class="cd-dropdown-icons is-hidden">
+                            <li class="go-back"><a href="#0">Menu</a></li>
+                            <li class="see-all"><a href="http://codyhouse.co/?p=748">Browse Services</a></li>
+                            <li>
+                              <a class="cd-dropdown-item item-1" href="http://codyhouse.co/?p=748">
+                                <h3>Service #1</h3>
+                                <p>This is the item description</p>
+                              </a>
+                            </li>
 
-                            <!--<li>-->
-                              <!--<a class="cd-dropdown-item item-2" href="http://codyhouse.co/?p=748">-->
-                                <!--<h3>Service #2</h3>-->
-                                <!--<p>This is the item description</p>-->
-                              <!--</a>-->
-                            <!--</li>-->
+                            <li>
+                              <a class="cd-dropdown-item item-2" href="http://codyhouse.co/?p=748">
+                                <h3>Service #2</h3>
+                                <p>This is the item description</p>
+                              </a>
+                            </li>
 
-                            <!--<li>-->
-                              <!--<a class="cd-dropdown-item item-3" href="http://codyhouse.co/?p=748">-->
-                                <!--<h3>Service #3</h3>-->
-                                <!--<p>This is the item description</p>-->
-                              <!--</a>-->
-                            <!--</li>-->
+                            <li>
+                              <a class="cd-dropdown-item item-3" href="http://codyhouse.co/?p=748">
+                                <h3>Service #3</h3>
+                                <p>This is the item description</p>
+                              </a>
+                            </li>
 
-                            <!--<li>-->
-                              <!--<a class="cd-dropdown-item item-4" href="http://codyhouse.co/?p=748">-->
-                                <!--<h3>Service #4</h3>-->
-                                <!--<p>This is the item description</p>-->
-                              <!--</a>-->
-                            <!--</li>-->
+                            <li>
+                              <a class="cd-dropdown-item item-4" href="http://codyhouse.co/?p=748">
+                                <h3>Service #4</h3>
+                                <p>This is the item description</p>
+                              </a>
+                            </li>
 
-                            <!--<li>-->
-                              <!--<a class="cd-dropdown-item item-5" href="http://codyhouse.co/?p=748">-->
-                                <!--<h3>Service #5</h3>-->
-                                <!--<p>This is the item description</p>-->
-                              <!--</a>-->
-                            <!--</li>-->
+                            <li>
+                              <a class="cd-dropdown-item item-5" href="http://codyhouse.co/?p=748">
+                                <h3>Service #5</h3>
+                                <p>This is the item description</p>
+                              </a>
+                            </li>
 
-                            <!--<li>-->
-                              <!--<a class="cd-dropdown-item item-6" href="http://codyhouse.co/?p=748">-->
-                                <!--<h3>Service #6</h3>-->
-                                <!--<p>This is the item description</p>-->
-                              <!--</a>-->
-                            <!--</li>-->
+                            <li>
+                              <a class="cd-dropdown-item item-6" href="http://codyhouse.co/?p=748">
+                                <h3>Service #6</h3>
+                                <p>This is the item description</p>
+                              </a>
+                            </li>
 
-                            <!--<li>-->
-                              <!--<a class="cd-dropdown-item item-7" href="http://codyhouse.co/?p=748">-->
-                                <!--<h3>Service #7</h3>-->
-                                <!--<p>This is the item description</p>-->
-                              <!--</a>-->
-                            <!--</li>-->
+                            <li>
+                              <a class="cd-dropdown-item item-7" href="http://codyhouse.co/?p=748">
+                                <h3>Service #7</h3>
+                                <p>This is the item description</p>
+                              </a>
+                            </li>
 
-                            <!--<li>-->
-                              <!--<a class="cd-dropdown-item item-8" href="http://codyhouse.co/?p=748">-->
-                                <!--<h3>Service #8</h3>-->
-                                <!--<p>This is the item description</p>-->
-                              <!--</a>-->
-                            <!--</li>-->
+                            <li>
+                              <a class="cd-dropdown-item item-8" href="http://codyhouse.co/?p=748">
+                                <h3>Service #8</h3>
+                                <p>This is the item description</p>
+                              </a>
+                            </li>
 
-                            <!--<li>-->
-                              <!--<a class="cd-dropdown-item item-9" href="http://codyhouse.co/?p=748">-->
-                                <!--<h3>Service #9</h3>-->
-                                <!--<p>This is the item description</p>-->
-                              <!--</a>-->
-                            <!--</li>-->
+                            <li>
+                              <a class="cd-dropdown-item item-9" href="http://codyhouse.co/?p=748">
+                                <h3>Service #9</h3>
+                                <p>This is the item description</p>
+                              </a>
+                            </li>
 
-                            <!--<li>-->
-                              <!--<a class="cd-dropdown-item item-10" href="http://codyhouse.co/?p=748">-->
-                                <!--<h3>Service #10</h3>-->
-                                <!--<p>This is the item description</p>-->
-                              <!--</a>-->
-                            <!--</li>-->
+                            <li>
+                              <a class="cd-dropdown-item item-10" href="http://codyhouse.co/?p=748">
+                                <h3>Service #10</h3>
+                                <p>This is the item description</p>
+                              </a>
+                            </li>
 
-                            <!--<li>-->
-                              <!--<a class="cd-dropdown-item item-11" href="http://codyhouse.co/?p=748">-->
-                                <!--<h3>Service #11</h3>-->
-                                <!--<p>This is the item description</p>-->
-                              <!--</a>-->
-                            <!--</li>-->
+                            <li>
+                              <a class="cd-dropdown-item item-11" href="http://codyhouse.co/?p=748">
+                                <h3>Service #11</h3>
+                                <p>This is the item description</p>
+                              </a>
+                            </li>
 
-                            <!--<li>-->
-                              <!--<a class="cd-dropdown-item item-12" href="http://codyhouse.co/?p=748">-->
-                                <!--<h3>Service #12</h3>-->
-                                <!--<p>This is the item description</p>-->
-                              <!--</a>-->
-                            <!--</li>-->
+                            <li>
+                              <a class="cd-dropdown-item item-12" href="http://codyhouse.co/?p=748">
+                                <h3>Service #12</h3>
+                                <p>This is the item description</p>
+                              </a>
+                            </li>
 
-                          <!--</ul> &lt;!&ndash; .cd-dropdown-icons &ndash;&gt;-->
-                        <!--</li> &lt;!&ndash; .has-children &ndash;&gt;-->
-                      <!--</ul> &lt;!&ndash; .cd-dropdown-content &ndash;&gt;-->
-                    <!--</nav> &lt;!&ndash; .cd-dropdown &ndash;&gt;-->
-              <!--</div>-->
-            <!--</div>-->
+                          </ul> <!-- .cd-dropdown-icons -->
+                        </li> <!-- .has-children -->
+                      </ul> <!-- .cd-dropdown-content -->
+                    </nav> <!-- .cd-dropdown -->
+              </div>
+            </div>
             <div class="req-call-div left-link-div">
               <span class="glyphicon glyphicon-earphone hidden-xs"></span>
               <span class="req_call req_call-small nomargin"><a href="/#/request-callback">  Request Callback</a></span>
